fix default page vertical and horizontal scroll

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -277,7 +277,6 @@ angular-cli removes postcss-rtl processed inline css, processed rules must be ad
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
-  height: 100vh;
   max-width: 100vw;
 }
 
